--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,13 @@ dependencies {
     compile "com.android.support:design:26.+"
     compile 'com.roughike:bottom-bar:2.3.1'
     compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.futuremind.recyclerfastscroll:fastscroll:0.2.5'
+
+    compile 'com.google.firebase:firebase-core:12.0.1'
+    compile 'com.google.firebase:firebase-database:12.0.1'
+    compile 'com.google.firebase:firebase-auth:12.0.1'
+    compile 'com.google.firebase:firebase-storage:12.0.1'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
