--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.develop.filhan.eencyclopediaone">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,13 +19,22 @@
             </intent-filter>
         </activity>
         <activity android:name=".ListItem" />
-        <activity android:name=".SearchItem" />
+        <activity
+            android:name=".SearchItem"
+            android:parentActivityName=".HomeActivity">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
         <activity android:name=".Splashscreen" />
         <activity android:name=".DetailItem" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_home" />
-        <activity android:name=".SignupActivity" android:parentActivityName=".HomeActivity"></activity>
+        <activity
+            android:name=".SignupActivity"
+            android:parentActivityName=".HomeActivity" />
+        <activity android:name=".BrowserActivity" android:parentActivityName=".DetailItem" android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
     </application>
 
 </manifest>
