--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,11 @@ dependencies {
     compile 'com.google.firebase:firebase-database:12.0.1'
     compile 'com.google.firebase:firebase-auth:12.0.1'
     compile 'com.google.firebase:firebase-storage:12.0.1'
+
+    compile 'com.google.android.gms:play-services-maps:12.0.1'
 }
+
+
 
 
 apply plugin: 'com.google.gms.google-services'
