--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.develop.filhan.eencyclopediaone">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="com.example.permission.MAPS_RECEIVE" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_android_map_api_key" />
+
         <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +40,12 @@
         <activity
             android:name=".SignupActivity"
             android:parentActivityName=".HomeActivity" />
-        <activity android:name=".BrowserActivity" android:parentActivityName=".DetailItem" android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+        <activity
+            android:name=".BrowserActivity"
+            android:parentActivityName=".DetailItem"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".SellerAddItemActivity" android:parentActivityName=".DetailItem"/>
+        <activity android:name=".SellerRegistrationActivity" android:parentActivityName=".HomeActivity"></activity>
     </application>
 
 </manifest>
